# gta3-img-builder

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
src/: Application.cpp  Application.h  ArchiveBuilder.cpp  ArchiveBuilder.h  DirEntry.cpp  DirEntry.h  DirWriter.cpp  DirWriter.h  Exceptions.h  FileListReader.cpp  FileListReader.h  ImgExtracter.cpp  ImgExtracter.h  ImgWriter.cpp  ImgWriter.h  main.cpp
test/: ArchiveBuilderTests.cpp  DirEntryTests.cpp  DirWriterTests.cpp  FileListReaderTests.cpp  ImgExtracterTests.cpp  ImgWriterTests.cpp  TestUtils.cpp  TestUtils.h
test/assets/: invalid1.dir  test_conflicting_filenames_list  test_files_list  valid1.dir  valid2_duplicate_filenames.dir
test/assets/folder1/: file3.test
